Add environment setup and infrastructure improvements

--- a/infrastructure/nginx/conf.d/default.conf
+++ b/infrastructure/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 # HTTP server for ACME challenges and redirects
 server {
     listen 80;
-    server_name localhost;
+    server_name ${DOMAIN_NAME:-localhost};
     
     # ACME Challenge for Let's Encrypt
     location /.well-known/acme-challenge/ {
@@ -19,11 +19,11 @@ server {
 server {
     listen 443 ssl;
     http2 on;
-    server_name localhost;
+    server_name ${DOMAIN_NAME:-localhost};
 
     # SSL Configuration
-    ssl_certificate /etc/nginx/ssl/cert.pem;
-    ssl_certificate_key /etc/nginx/ssl/key.pem;
+    ssl_certificate ${SSL_CERT_PATH:-/etc/nginx/ssl/cert.pem};
+    ssl_certificate_key ${SSL_KEY_PATH:-/etc/nginx/ssl/key.pem};
     
     # SSL Security Settings
     ssl_protocols TLSv1.2 TLSv1.3;
