--- a/infrastructure/dev/docker-compose.dev.yml
+++ b/infrastructure/dev/docker-compose.dev.yml
@@ -5,14 +5,15 @@ services:
       context: ../services/ai-backend
       dockerfile: Dockerfile.dev
     environment:
-      - NODE_ENV=development
-      - PORT=3001
+      - NODE_ENV=${DEV_NODE_ENV:-development}
+      - PORT=${DEV_AI_BACKEND_PORT:-3001}
+      - GEMINI_API_KEY=${GEMINI_API_KEY}
     volumes:
       - ../services/ai-backend:/app
       - /app/node_modules
     command: npm run dev
     ports:
-      - "3001:3001"
+      - "${DEV_AI_BACKEND_PORT:-3001}:${DEV_AI_BACKEND_PORT:-3001}"
 
   # Workfolio - Development mode with live reloading
   workfolio:
@@ -20,13 +21,14 @@ services:
       context: ../workfolio
       dockerfile: Dockerfile.dev
     environment:
-      - NODE_ENV=development
+      - NODE_ENV=${DEV_NODE_ENV:-development}
+      - VITE_AI_BACKEND_URL=${VITE_AI_BACKEND_URL:-http://localhost:3001}
     volumes:
       - ../workfolio:/app
       - /app/node_modules
     command: npm run dev -- --host
     ports:
-      - "3000:3000"
+      - "${DEV_WORKFOLIO_PORT:-3000}:${DEV_WORKFOLIO_PORT:-3000}"
 
   # Arachne - Development mode with live reloading
   arachne:
@@ -34,19 +36,19 @@ services:
       context: ../services/arachne
       dockerfile: Dockerfile.dev
     environment:
-      - SCRAPER_REDIS_ADDR=redis:6379
-      - SCRAPER_REDIS_DB=0
-      - SCRAPER_ENABLE_METRICS=true
-      - SCRAPER_ENABLE_LOGGING=true
-      - SCRAPER_LOG_LEVEL=debug
-      - SCRAPER_MAX_CONCURRENT=3
-      - SCRAPER_REQUEST_TIMEOUT=60s
-      - SCRAPER_TOTAL_TIMEOUT=90s
-      - SCRAPER_USE_HEADLESS=true
+      - SCRAPER_REDIS_ADDR=${ARACHNE_REDIS_ADDR:-redis:6379}
+      - SCRAPER_REDIS_DB=${ARACHNE_REDIS_DB:-0}
+      - SCRAPER_ENABLE_METRICS=${ARACHNE_ENABLE_METRICS:-true}
+      - SCRAPER_ENABLE_LOGGING=${ARACHNE_ENABLE_LOGGING:-true}
+      - SCRAPER_LOG_LEVEL=${ARACHNE_DEV_LOG_LEVEL:-debug}
+      - SCRAPER_MAX_CONCURRENT=${ARACHNE_DEV_MAX_CONCURRENT:-3}
+      - SCRAPER_REQUEST_TIMEOUT=${ARACHNE_DEV_REQUEST_TIMEOUT:-60s}
+      - SCRAPER_TOTAL_TIMEOUT=${ARACHNE_DEV_TOTAL_TIMEOUT:-90s}
+      - SCRAPER_USE_HEADLESS=${ARACHNE_USE_HEADLESS:-true}
     volumes:
       - ../services/arachne:/app
     ports:
-      - "8080:8080"
+      - "${DEV_ARACHNE_PORT:-8080}:${DEV_ARACHNE_PORT:-8080}"
 
   # Nginx - Always running in development mode
   nginx:
