--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     image: nginx:alpine
     container_name: portfolio-nginx
     ports:
-      - "80:80"
-      - "443:443"
+      - "${NGINX_HTTP_PORT:-80}:80"
+      - "${NGINX_HTTPS_PORT:-443}:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
@@ -16,7 +16,7 @@ services:
       - arachne
     restart: unless-stopped
     networks:
-      - portfolio-network
+      - ${DOCKER_NETWORK_NAME:-portfolio-network}
 
   # Workfolio - Main portfolio application
   workfolio:
@@ -25,10 +25,11 @@ services:
       dockerfile: Dockerfile
     container_name: portfolio-workfolio
     environment:
-      - NODE_ENV=production
+      - NODE_ENV=${WORKFOLIO_NODE_ENV:-production}
+      - VITE_AI_BACKEND_URL=${VITE_AI_BACKEND_URL:-/api/ai}
     restart: unless-stopped
     networks:
-      - portfolio-network
+      - ${DOCKER_NETWORK_NAME:-portfolio-network}
     healthcheck:
       test:
         [
@@ -51,11 +52,16 @@ services:
       dockerfile: Dockerfile
     container_name: portfolio-ai-backend
     environment:
-      - NODE_ENV=production
-      - PORT=3001
+      - NODE_ENV=${AI_BACKEND_NODE_ENV:-production}
+      - PORT=${AI_BACKEND_PORT:-3001}
+      - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - LOG_LEVEL=${AI_BACKEND_LOG_LEVEL:-info}
+      - ENABLE_METRICS=${AI_BACKEND_ENABLE_METRICS:-true}
+      - RATE_LIMIT_WINDOW_MS=${AI_BACKEND_RATE_LIMIT_WINDOW_MS:-900000}
+      - RATE_LIMIT_MAX_REQUESTS=${AI_BACKEND_RATE_LIMIT_MAX_REQUESTS:-100}
     restart: unless-stopped
     networks:
-      - portfolio-network
+      - ${DOCKER_NETWORK_NAME:-portfolio-network}
     healthcheck:
       test:
         [
@@ -78,21 +84,24 @@ services:
       dockerfile: Dockerfile
     container_name: portfolio-arachne
     environment:
-      - SCRAPER_REDIS_ADDR=redis:6379
-      - SCRAPER_REDIS_DB=0
-      - SCRAPER_ENABLE_METRICS=true
-      - SCRAPER_ENABLE_LOGGING=true
-      - SCRAPER_LOG_LEVEL=info
-      - SCRAPER_MAX_CONCURRENT=5
-      - SCRAPER_REQUEST_TIMEOUT=120s
-      - SCRAPER_TOTAL_TIMEOUT=180s
-      - SCRAPER_USE_HEADLESS=true
+      - SCRAPER_REDIS_ADDR=${ARACHNE_REDIS_ADDR:-redis:6379}
+      - SCRAPER_REDIS_DB=${ARACHNE_REDIS_DB:-0}
+      - SCRAPER_ENABLE_METRICS=${ARACHNE_ENABLE_METRICS:-true}
+      - SCRAPER_ENABLE_LOGGING=${ARACHNE_ENABLE_LOGGING:-true}
+      - SCRAPER_LOG_LEVEL=${ARACHNE_LOG_LEVEL:-info}
+      - SCRAPER_MAX_CONCURRENT=${ARACHNE_MAX_CONCURRENT:-5}
+      - SCRAPER_REQUEST_TIMEOUT=${ARACHNE_REQUEST_TIMEOUT:-120s}
+      - SCRAPER_TOTAL_TIMEOUT=${ARACHNE_TOTAL_TIMEOUT:-180s}
+      - SCRAPER_USE_HEADLESS=${ARACHNE_USE_HEADLESS:-true}
+      - SCRAPER_USER_AGENT=${ARACHNE_USER_AGENT:-Mozilla/5.0 (compatible; PortfolioBot/1.0)}
+      - SCRAPER_RATE_LIMIT=${ARACHNE_RATE_LIMIT:-2}
+      - SCRAPER_RATE_LIMIT_WINDOW=${ARACHNE_RATE_LIMIT_WINDOW:-1s}
     depends_on:
       redis:
         condition: service_healthy
     restart: unless-stopped
     networks:
-      - portfolio-network
+      - ${DOCKER_NETWORK_NAME:-portfolio-network}
     healthcheck:
       test:
         [
@@ -114,10 +123,10 @@ services:
     container_name: portfolio-redis
     volumes:
       - redis_data:/data
-    command: redis-server --appendonly yes
+    command: redis-server --appendonly yes --maxmemory ${REDIS_MAX_MEMORY:-512mb} --maxmemory-policy ${REDIS_MAX_MEMORY_POLICY:-allkeys-lru}
     restart: unless-stopped
     networks:
-      - portfolio-network
+      - ${DOCKER_NETWORK_NAME:-portfolio-network}
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 30s
@@ -129,15 +138,15 @@ services:
     image: rediscommander/redis-commander:latest
     container_name: portfolio-redis-commander
     environment:
-      - REDIS_HOSTS=local:redis:6379
+      - REDIS_HOSTS=local:redis:${REDIS_PORT:-6379}
     depends_on:
       - redis
     restart: unless-stopped
     networks:
-      - portfolio-network
+      - ${DOCKER_NETWORK_NAME:-portfolio-network}
 
 networks:
-  portfolio-network:
+  ${DOCKER_NETWORK_NAME:-portfolio-network}:
     driver: bridge
 
 volumes:
