--- a/infrastructure/prod/docker-compose.prod.yml
+++ b/infrastructure/prod/docker-compose.prod.yml
@@ -7,7 +7,7 @@ services:
       - ./nginx/ssl:/etc/letsencrypt
       - ./nginx/certbot/www:/var/www/certbot
       - ./logs/certbot:/var/log/letsencrypt
-    command: certonly --webroot --webroot-path=/var/www/certbot --email your-email@example.com --agree-tos --no-eff-email --force-renewal -d your-domain.com
+    command: certonly --webroot --webroot-path=/var/www/certbot --email ${SSL_EMAIL} --agree-tos --no-eff-email --force-renewal -d ${DOMAIN_NAME}
     profiles:
       - ssl-setup
     depends_on:
@@ -19,8 +19,8 @@ services:
     image: nginx:alpine
     container_name: portfolio-nginx-prod
     ports:
-      - "80:80"
-      - "443:443"
+      - "${NGINX_HTTP_PORT:-80}:80"
+      - "${NGINX_HTTPS_PORT:-443}:443"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/conf.d:/etc/nginx/conf.d:ro
@@ -36,7 +36,7 @@ services:
         condition: service_healthy
     restart: unless-stopped
     networks:
-      - portfolio-network-prod
+      - ${DOCKER_NETWORK_NAME:-portfolio-network}-prod
     healthcheck:
       test:
         [
@@ -54,8 +54,8 @@ services:
     deploy:
       resources:
         limits:
-          memory: 256M
-          cpus: "0.5"
+          memory: ${NGINX_MEMORY_LIMIT:-256M}
+          cpus: "${NGINX_CPU_LIMIT:-0.5}"
         reservations:
           memory: 128M
           cpus: "0.25"
@@ -69,11 +69,11 @@ services:
         NODE_ENV: production
     container_name: portfolio-workfolio-prod
     environment:
-      - NODE_ENV=production
-      - VITE_API_BASE_URL=https://your-domain.com/api
+      - NODE_ENV=${WORKFOLIO_NODE_ENV:-production}
+      - VITE_AI_BACKEND_URL=${VITE_AI_BACKEND_URL:-https://your-domain.com/api/ai}
     restart: unless-stopped
     networks:
-      - portfolio-network-prod
+      - ${DOCKER_NETWORK_NAME:-portfolio-network}-prod
     healthcheck:
       test:
         [
@@ -91,8 +91,8 @@ services:
     deploy:
       resources:
         limits:
-          memory: 512M
-          cpus: "1.0"
+          memory: ${WORKFOLIO_MEMORY_LIMIT:-512M}
+          cpus: "${WORKFOLIO_CPU_LIMIT:-1.0}"
         reservations:
           memory: 256M
           cpus: "0.5"
@@ -111,15 +111,16 @@ services:
         NODE_ENV: production
     container_name: portfolio-ai-backend-prod
     environment:
-      - NODE_ENV=production
-      - PORT=3001
-      - LOG_LEVEL=info
-      - ENABLE_METRICS=true
-      - RATE_LIMIT_WINDOW_MS=900000
-      - RATE_LIMIT_MAX_REQUESTS=100
+      - NODE_ENV=${AI_BACKEND_NODE_ENV:-production}
+      - PORT=${AI_BACKEND_PORT:-3001}
+      - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - LOG_LEVEL=${AI_BACKEND_LOG_LEVEL:-info}
+      - ENABLE_METRICS=${AI_BACKEND_ENABLE_METRICS:-true}
+      - RATE_LIMIT_WINDOW_MS=${AI_BACKEND_RATE_LIMIT_WINDOW_MS:-900000}
+      - RATE_LIMIT_MAX_REQUESTS=${AI_BACKEND_RATE_LIMIT_MAX_REQUESTS:-100}
     restart: unless-stopped
     networks:
-      - portfolio-network-prod
+      - ${DOCKER_NETWORK_NAME:-portfolio-network}-prod
     healthcheck:
       test:
         [
@@ -137,8 +138,8 @@ services:
     deploy:
       resources:
         limits:
-          memory: 1G
-          cpus: "1.0"
+          memory: ${AI_BACKEND_MEMORY_LIMIT:-1G}
+          cpus: "${AI_BACKEND_CPU_LIMIT:-1.0}"
         reservations:
           memory: 512M
           cpus: "0.5"
@@ -155,24 +156,24 @@ services:
       dockerfile: Dockerfile
     container_name: portfolio-arachne-prod
     environment:
-      - SCRAPER_REDIS_ADDR=redis:6379
-      - SCRAPER_REDIS_DB=0
-      - SCRAPER_ENABLE_METRICS=true
-      - SCRAPER_ENABLE_LOGGING=true
-      - SCRAPER_LOG_LEVEL=info
-      - SCRAPER_MAX_CONCURRENT=10
-      - SCRAPER_REQUEST_TIMEOUT=120s
-      - SCRAPER_TOTAL_TIMEOUT=180s
-      - SCRAPER_USE_HEADLESS=true
-      - SCRAPER_USER_AGENT=Mozilla/5.0 (compatible; PortfolioBot/1.0)
-      - SCRAPER_RATE_LIMIT=2
-      - SCRAPER_RATE_LIMIT_WINDOW=1s
+      - SCRAPER_REDIS_ADDR=${ARACHNE_REDIS_ADDR:-redis:6379}
+      - SCRAPER_REDIS_DB=${ARACHNE_REDIS_DB:-0}
+      - SCRAPER_ENABLE_METRICS=${ARACHNE_ENABLE_METRICS:-true}
+      - SCRAPER_ENABLE_LOGGING=${ARACHNE_ENABLE_LOGGING:-true}
+      - SCRAPER_LOG_LEVEL=${ARACHNE_LOG_LEVEL:-info}
+      - SCRAPER_MAX_CONCURRENT=${ARACHNE_MAX_CONCURRENT:-10}
+      - SCRAPER_REQUEST_TIMEOUT=${ARACHNE_REQUEST_TIMEOUT:-120s}
+      - SCRAPER_TOTAL_TIMEOUT=${ARACHNE_TOTAL_TIMEOUT:-180s}
+      - SCRAPER_USE_HEADLESS=${ARACHNE_USE_HEADLESS:-true}
+      - SCRAPER_USER_AGENT=${ARACHNE_USER_AGENT:-Mozilla/5.0 (compatible; PortfolioBot/1.0)}
+      - SCRAPER_RATE_LIMIT=${ARACHNE_RATE_LIMIT:-2}
+      - SCRAPER_RATE_LIMIT_WINDOW=${ARACHNE_RATE_LIMIT_WINDOW:-1s}
     depends_on:
       redis:
         condition: service_healthy
     restart: unless-stopped
     networks:
-      - portfolio-network-prod
+      - ${DOCKER_NETWORK_NAME:-portfolio-network}-prod
     healthcheck:
       test:
         [
@@ -190,8 +191,8 @@ services:
     deploy:
       resources:
         limits:
-          memory: 2G
-          cpus: "2.0"
+          memory: ${ARACHNE_MEMORY_LIMIT:-2G}
+          cpus: "${ARACHNE_CPU_LIMIT:-2.0}"
         reservations:
           memory: 1G
           cpus: "1.0"
@@ -211,14 +212,14 @@ services:
     command: >
       redis-server 
       --appendonly yes 
-      --maxmemory 512mb 
-      --maxmemory-policy allkeys-lru
+      --maxmemory ${REDIS_MAX_MEMORY:-512mb} 
+      --maxmemory-policy ${REDIS_MAX_MEMORY_POLICY:-allkeys-lru}
       --save 900 1
       --save 300 10
       --save 60 10000
     restart: unless-stopped
     networks:
-      - portfolio-network-prod
+      - ${DOCKER_NETWORK_NAME:-portfolio-network}-prod
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 30s
@@ -227,8 +228,8 @@ services:
     deploy:
       resources:
         limits:
-          memory: 1G
-          cpus: "1.0"
+          memory: ${REDIS_MEMORY_LIMIT:-1G}
+          cpus: "${REDIS_CPU_LIMIT:-1.0}"
         reservations:
           memory: 512M
           cpus: "0.5"
@@ -243,12 +244,12 @@ services:
     image: rediscommander/redis-commander:latest
     container_name: portfolio-redis-commander-prod
     environment:
-      - REDIS_HOSTS=local:redis:6379
+      - REDIS_HOSTS=local:redis:${REDIS_PORT:-6379}
     depends_on:
       - redis
     restart: unless-stopped
     networks:
-      - portfolio-network-prod
+      - ${DOCKER_NETWORK_NAME:-portfolio-network}-prod
     profiles:
       - monitoring
     deploy:
@@ -261,11 +262,11 @@ services:
           cpus: "0.25"
 
 networks:
-  portfolio-network-prod:
+  ${DOCKER_NETWORK_NAME:-portfolio-network}-prod:
     driver: bridge
     ipam:
       config:
-        - subnet: 172.20.0.0/16
+        - subnet: ${DOCKER_NETWORK_SUBNET:-172.20.0.0/16}
 
 volumes:
   redis_data_prod:
