--- a/infrastructure/nginx/conf.d/default.conf
+++ b/infrastructure/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 # HTTP server for ACME challenges and redirects
 server {
     listen 80;
-    server_name ${DOMAIN_NAME:-localhost};
+    server_name localhost;
     
     # ACME Challenge for Let's Encrypt
     location /.well-known/acme-challenge/ {
@@ -9,6 +9,16 @@ server {
         try_files $uri =404;
     }
     
+    # Allow stub_status access without redirect
+    location /stub_status {
+        access_log off;
+        stub_status on;
+        allow 127.0.0.1;
+        allow 172.16.0.0/12;
+        allow 192.168.0.0/16;
+        deny all;
+    }
+
     # Redirect all other HTTP traffic to HTTPS
     location / {
         return 301 https://$server_name$request_uri;
@@ -19,11 +29,11 @@ server {
 server {
     listen 443 ssl;
     http2 on;
-    server_name ${DOMAIN_NAME:-localhost};
+    server_name localhost;
 
     # SSL Configuration
-    ssl_certificate ${SSL_CERT_PATH:-/etc/nginx/ssl/cert.pem};
-    ssl_certificate_key ${SSL_KEY_PATH:-/etc/nginx/ssl/key.pem};
+    ssl_certificate /etc/nginx/ssl/cert.pem;
+    ssl_certificate_key /etc/nginx/ssl/key.pem;
     
     # SSL Security Settings
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -145,6 +155,8 @@ server {
         return 200 "healthy\n";
         add_header Content-Type text/plain;
     }
+
+
 
     # Fallback for React Router
     location @fallback {
