--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,11 +24,11 @@ jobs:
         with:
           node-version: "18"
           cache: "npm"
-          cache-dependency-path: services/${{ matrix.service }}/package-lock.json
+          cache-dependency-path: ${{ matrix.service == 'workfolio' && 'workfolio/package-lock.json' || format('services/{0}/package-lock.json', matrix.service) }}
 
       - name: Install dependencies (workfolio)
         if: matrix.service == 'workfolio'
-        working-directory: services/workfolio
+        working-directory: workfolio
         run: npm ci
 
       - name: Install dependencies (ai-backend)
@@ -46,7 +46,7 @@ jobs:
 
       - name: Lint and test (workfolio)
         if: matrix.service == 'workfolio'
-        working-directory: services/workfolio
+        working-directory: workfolio
         run: |
           npm run lint
           npm run test
@@ -78,7 +78,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Build workfolio image
-        working-directory: services/workfolio
+        working-directory: workfolio
         run: |
           docker build -t workfolio:ci .
           docker build -f Dockerfile.dev -t workfolio:ci-dev .
