--- a/infrastructure/nginx/conf.d/default.conf
+++ b/infrastructure/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 # HTTP server for ACME challenges and redirects
 server {
     listen 80;
-    server_name localhost;
+    server_name kareemsasa.dev;
     
     # ACME Challenge for Let's Encrypt
     location /.well-known/acme-challenge/ {
@@ -29,7 +29,7 @@ server {
 server {
     listen 443 ssl;
     http2 on;
-    server_name localhost;
+    server_name kareemsasa.dev;
 
     # SSL Configuration
     ssl_certificate /etc/nginx/ssl/cert.pem;
@@ -49,34 +49,13 @@ server {
     add_header Referrer-Policy "no-referrer-when-downgrade" always;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-    # WebSocket support for Vite HMR
-    location /@vite/client {
-        proxy_pass http://workfolio:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
     # Main portfolio (Workfolio)
     location / {
-        proxy_pass http://workfolio:3000;
+        proxy_pass http://workfolio:80;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # WebSocket support for Vite HMR
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        
-        # Handle React Router
-        proxy_intercept_errors on;
-        error_page 404 = @fallback;
     }
 
     # AI Backend API
@@ -154,17 +133,6 @@ server {
         access_log off;
         return 200 "healthy\n";
         add_header Content-Type text/plain;
-    }
-
-
-
-    # Fallback for React Router
-    location @fallback {
-        proxy_pass http://workfolio:3000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     # Error pages
