--- a/infrastructure/nginx/conf.d/default.conf
+++ b/infrastructure/nginx/conf.d/default.conf
@@ -26,118 +26,118 @@ server {
 }
 
 # Main portfolio application with HTTPS
-server {
-    listen 443 ssl;
-    http2 on;
-    server_name kareemsasa.dev;
+# server {
+#     listen 443 ssl;
+#     http2 on;
+#     server_name kareemsasa.dev;
 
-    # SSL Configuration
-    ssl_certificate /etc/nginx/ssl/cert.pem;
-    ssl_certificate_key /etc/nginx/ssl/key.pem;
+#     # SSL Configuration
+#     ssl_certificate /etc/nginx/ssl/cert.pem;
+#     ssl_certificate_key /etc/nginx/ssl/key.pem;
     
-    # SSL Security Settings
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384;
-    ssl_prefer_server_ciphers off;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 10m;
+#     # SSL Security Settings
+#     ssl_protocols TLSv1.2 TLSv1.3;
+#     ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES128-SHA256:ECDHE-RSA-AES256-SHA384;
+#     ssl_prefer_server_ciphers off;
+#     ssl_session_cache shared:SSL:10m;
+#     ssl_session_timeout 10m;
     
-    # Security headers
-    add_header X-Frame-Options "SAMEORIGIN" always;
-    add_header X-XSS-Protection "1; mode=block" always;
-    add_header X-Content-Type-Options "nosniff" always;
-    add_header Referrer-Policy "no-referrer-when-downgrade" always;
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+#     # Security headers
+#     add_header X-Frame-Options "SAMEORIGIN" always;
+#     add_header X-XSS-Protection "1; mode=block" always;
+#     add_header X-Content-Type-Options "nosniff" always;
+#     add_header Referrer-Policy "no-referrer-when-downgrade" always;
+#     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
-    # Main portfolio (Workfolio)
-    location / {
-        proxy_pass http://workfolio:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+#     # Main portfolio (Workfolio)
+#     location / {
+#         proxy_pass http://workfolio:80;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
 
-    # AI Backend API
-    location /api/ai/ {
-        limit_req zone=api burst=20 nodelay;
-        rewrite ^/api/ai(/.*)$ $1 break;
-        proxy_pass http://ai-backend:3001;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+#     # AI Backend API
+#     location /api/ai/ {
+#         limit_req zone=api burst=20 nodelay;
+#         rewrite ^/api/ai(/.*)$ $1 break;
+#         proxy_pass http://ai-backend:3001;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # CORS headers
-        add_header Access-Control-Allow-Origin * always;
-        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
+#         # CORS headers
+#         add_header Access-Control-Allow-Origin * always;
+#         add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
+#         add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
         
-        if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin *;
-            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
-            add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization";
-            add_header Access-Control-Max-Age 1728000;
-            add_header Content-Type 'text/plain; charset=utf-8';
-            add_header Content-Length 0;
-            return 204;
-        }
-    }
+#         if ($request_method = 'OPTIONS') {
+#             add_header Access-Control-Allow-Origin *;
+#             add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
+#             add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization";
+#             add_header Access-Control-Max-Age 1728000;
+#             add_header Content-Type 'text/plain; charset=utf-8';
+#             add_header Content-Length 0;
+#             return 204;
+#         }
+#     }
 
-    # Arachne scraping API
-    location /api/scrape/ {
-        limit_req zone=scraper burst=10 nodelay;
-        rewrite ^/api/scrape(/.*)$ $1 break;
-        proxy_pass http://arachne:8080;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+#     # Arachne scraping API
+#     location /api/scrape/ {
+#         limit_req zone=scraper burst=10 nodelay;
+#         rewrite ^/api/scrape(/.*)$ $1 break;
+#         proxy_pass http://arachne:8080;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # CORS headers
-        add_header Access-Control-Allow-Origin * always;
-        add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
-        add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
+#         # CORS headers
+#         add_header Access-Control-Allow-Origin * always;
+#         add_header Access-Control-Allow-Methods "GET, POST, OPTIONS" always;
+#         add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization" always;
         
-        if ($request_method = 'OPTIONS') {
-            add_header Access-Control-Allow-Origin *;
-            add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
-            add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization";
-            add_header Access-Control-Max-Age 1728000;
-            add_header Content-Type 'text/plain; charset=utf-8';
-            add_header Content-Length 0;
-            return 204;
-        }
-    }
+#         if ($request_method = 'OPTIONS') {
+#             add_header Access-Control-Allow-Origin *;
+#             add_header Access-Control-Allow-Methods "GET, POST, OPTIONS";
+#             add_header Access-Control-Allow-Headers "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization";
+#             add_header Access-Control-Max-Age 1728000;
+#             add_header Content-Type 'text/plain; charset=utf-8';
+#             add_header Content-Length 0;
+#             return 204;
+#         }
+#     }
 
-    # Arachne health and metrics
-    location /api/arachne/ {
-        proxy_pass http://arachne:8080/;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+#     # Arachne health and metrics
+#     location /api/arachne/ {
+#         proxy_pass http://arachne:8080/;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
 
-    # Redis Commander (optional management UI)
-    # location /redis/ {
-    #     proxy_pass http://redis-commander:8081/;
-    #     proxy_set_header Host $host;
-    #     proxy_set_header X-Real-IP $remote_addr;
-    #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    #     proxy_set_header X-Forwarded-Proto $scheme;
-    # }
+#     # Redis Commander (optional management UI)
+#     # location /redis/ {
+#     #     proxy_pass http://redis-commander:8081/;
+#     #     proxy_set_header Host $host;
+#     #     proxy_set_header X-Real-IP $remote_addr;
+#     #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     #     proxy_set_header X-Forwarded-Proto $scheme;
+#     # }
 
-    # Health check endpoint
-    location /health {
-        access_log off;
-        return 200 "healthy\n";
-        add_header Content-Type text/plain;
-    }
+#     # Health check endpoint
+#     location /health {
+#         access_log off;
+#         return 200 "healthy\n";
+#         add_header Content-Type text/plain;
+#     }
 
-    # Error pages
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-        root /usr/share/nginx/html;
-    }
-} 
+#     # Error pages
+#     error_page 500 502 503 504 /50x.html;
+#     location = /50x.html {
+#         root /usr/share/nginx/html;
+#     }
+# } 
