--- a/infrastructure/nginx/conf.d/default.conf
+++ b/infrastructure/nginx/conf.d/default.conf
@@ -32,8 +32,8 @@ server {
     server_name kareemsasa.dev;
 
     # SSL Configuration
-    ssl_certificate /etc/nginx/ssl/cert.pem;
-    ssl_certificate_key /etc/nginx/ssl/key.pem;
+    ssl_certificate /etc/letsencrypt/live/kareemsasa.dev/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/kareemsasa.dev/privkey.pem;
     
     # SSL Security Settings
     ssl_protocols TLSv1.2 TLSv1.3;
