Update infrastructure configs, CI/CD workflows, and submodules (ai-backend and workfolio)

--- a/infrastructure/env.example
+++ b/infrastructure/env.example
@@ -27,6 +27,9 @@ AI_BACKEND_ENABLE_METRICS=true
 AI_BACKEND_RATE_LIMIT_WINDOW_MS=900000
 AI_BACKEND_RATE_LIMIT_MAX_REQUESTS=100
 
+# Redis URL for quotas (optional in dev; required for per-IP daily limits)
+AI_BACKEND_REDIS_URL=redis://redis:6379/0
+
 # =============================================================================
 # ARACHNE SCRAPER CONFIGURATION
 # =============================================================================
@@ -73,6 +76,15 @@ WORKFOLIO_PORT=3000
 
 # API base URL for frontend (used by Vite)
 VITE_AI_BACKEND_URL=https://your-domain.com/api/ai
+
+# Cloudflare Turnstile site key (public). Leave blank for dev fallback.
+VITE_TURNSTILE_SITE_KEY=
+
+# Signed session tokens (required in prod). Use a strong random string.
+SESSION_TOKEN_SECRET=
+
+# Cloudflare Turnstile secret key (server-side). Required if site key is set.
+TURNSTILE_SECRET=
 
 # =============================================================================
 # NGINX CONFIGURATION
