--- a/infrastructure/docker-compose.yml
+++ b/infrastructure/docker-compose.yml
@@ -46,6 +46,9 @@ services:
       - ENABLE_METRICS=${AI_BACKEND_ENABLE_METRICS:-true}
       - RATE_LIMIT_WINDOW_MS=${AI_BACKEND_RATE_LIMIT_WINDOW_MS:-900000}
       - RATE_LIMIT_MAX_REQUESTS=${AI_BACKEND_RATE_LIMIT_MAX_REQUESTS:-100}
+      - SESSION_TOKEN_SECRET=${SESSION_TOKEN_SECRET:-change-me}
+      - REDIS_URL=${AI_BACKEND_REDIS_URL:-redis://redis:6379/0}
+      - TURNSTILE_SECRET=${TURNSTILE_SECRET:-}
     restart: unless-stopped
     networks:
       - portfolio-network
