--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,6 @@ jobs:
           export WORKFOLIO_IMAGE="${WORKFOLIO_IMAGE}"
           export AI_BACKEND_IMAGE="${AI_BACKEND_IMAGE}"
           export ARACHNE_IMAGE="${ARACHNE_IMAGE}"
-          echo "${GHCR_TOKEN}" | docker login ghcr.io -u "${GHCR_USERNAME}" --password-stdin
           echo "Disk usage before cleanup:" && df -h /
           echo "Docker disk usage before cleanup:" && docker system df || true
           echo "Pruning unused Docker data to free space..."
@@ -58,13 +57,28 @@ jobs:
           docker image prune -af || true
           docker builder prune -af || true
           docker network prune -f || true
+          docker volume prune -f || true
           # Truncate very large Docker container logs (requires root; ignore if not permitted)
           sudo find /var/lib/docker/containers -type f -name "*json.log" -size +100M -exec truncate -s 0 {} \; 2>/dev/null || true
           # Limit systemd journal size (requires root; ignore if not permitted)
           sudo journalctl --vacuum-size=100M 2>/dev/null || true
+          # Remove old local docker config if present (to free a bit of space)
+          rm -rf "\$HOME/.docker" 2>/dev/null || true
+          # Use a temp docker config to avoid writing into a full home dir
+          DOCKER_CONFIG_DIR="$(mktemp -d -t docker-config-XXXXXX 2>/dev/null || echo /tmp/docker-config)"
+          mkdir -p "\$DOCKER_CONFIG_DIR" || true
+          export DOCKER_CONFIG="\$DOCKER_CONFIG_DIR"
+          echo "Logging in to GHCR using temporary DOCKER_CONFIG at \$DOCKER_CONFIG" 
+          echo "${GHCR_TOKEN}" | docker login ghcr.io -u "${GHCR_USERNAME}" --password-stdin || true
           echo "Disk usage after cleanup:" && df -h /
           echo "Docker disk usage after cleanup:" && docker system df || true
-          docker-compose -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml pull || true
-          docker-compose -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml up -d
-          docker-compose -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml ps
+          # Choose docker compose command
+          if command -v docker-compose >/dev/null 2>&1; then
+            COMPOSE_CMD="docker-compose"
+          else
+            COMPOSE_CMD="docker compose"
+          fi
+          \$COMPOSE_CMD -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml pull || true
+          \$COMPOSE_CMD -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml up -d
+          \$COMPOSE_CMD -f infrastructure/docker-compose.yml -f infrastructure/prod/docker-compose.prod.yml ps
           EOF
